--- a/build.gradle
+++ b/build.gradle
@@ -19,8 +19,8 @@ allprojects {
     version = '0.1.3'
     ext {
         appName = 'Overlap2D'
-        gdxVersion = '1.7.1'
-        box2DLightsVersion = '1.4'
+        gdxVersion = '1.9.3'
+        //box2DLightsVersion = '1.4'
         visuiVersion = '0.9.2'
 
         packMain = ["overlap2d/art/textures", "overlap2d/assets/style/", "uiskin"]
@@ -66,7 +66,8 @@ dependencies {
     compile "com.badlogicgames.gdx:gdx:$gdxVersion"
     compile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
     compile "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
-    compile "com.badlogicgames.box2dlights:box2dlights:$box2DLightsVersion"
+//    compile "com.badlogicgames.box2dlights:box2dlights:$box2DLightsVersion"
+    compile project(":box2dLights")
     compile "com.mortennobel:java-image-scaling:0.8.5"
     testCompile 'junit:junit:4.12'
     testCompile 'com.google.guava:guava:18.0'
