--- a/overlap2d-common-api/build.gradle
+++ b/overlap2d-common-api/build.gradle
@@ -3,7 +3,7 @@ apply plugin: "java"
 sourceSets.main.java.srcDirs = [ "src/" ]
 
 ext {
-    gdxVersion = '1.7.0'
+    gdxVersion = '1.9.3'
     ashleyVersion = '1.5.0'
 }
 
@@ -11,7 +11,8 @@ dependencies {
     compile "com.badlogicgames.gdx:gdx:$gdxVersion"
     compile "com.badlogicgames.ashley:ashley:$ashleyVersion"
     compile "com.kotcrab.vis:vis-ui:0.9.2"
-    compile "com.underwaterapps.overlap2druntime:overlap2d-runtime-libgdx:0.1.2-SNAPSHOT"
+    //compile "com.underwaterapps.overlap2druntime:overlap2d-runtime-libgdx:0.1.2-SNAPSHOT"
+    compile project(":overlap2d-runtime-libgdx")
     compile 'net.mountainblade:modular:1.0'
 }
 
