Remove unused import
Signed-off-by: Simone Arpe <simon.arpe@gmail.com>

--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,7 @@ apply plugin: 'jacoco'
 apply plugin: 'com.github.kt3k.coveralls'
 
 import com.badlogic.gdx.tools.texturepacker.TexturePacker
-import org.ajoberstar.grgit.Grgit
+//import org.ajoberstar.grgit.Grgit
 
 //def spineDestination = file("spine-runtimes")
 //if (!spineDestination.exists()) Grgit.clone(dir: spineDestination, uri: 'https://github.com/EsotericSoftware/spine-runtimes.git')
